2002-12-01  Bruno Haible  <bruno@clisp.org>

	Make it buildable with CC=g++.

	* m4/proto.m4 (CL_PROTO_RET): Add an argument, the ANSI-DECL.
	* m4/abort.m4 (CL_ABORT): Update.
	* m4/closedir.m4 (CL_CLOSEDIR): Update.
	* m4/free.m4 (CL_FREE): Make it work better with CC=g++.
	* m4/getpagesize.m4 (CL_GETPAGESIZE): Update.
	* m4/putenv.m4 (CL_PUTENV): Avoid buggy AC_CHECK_FUNCS(putenv).
	* m4/select.m4 (RL_SELECT): Avoid buggy AC_CHECK_FUNCS(select).
	(CL_SELECT): Likewise.
	* m4/shmat.m4 (CL_SHMAT): Make it work better with CC=g++.
	* m4/signal.m4 (RL_RETSIGTYPE): Make it work better with CC=g++.
	* m4/strlen.m4 (CL_STRLEN): Make it work better with CC=g++.

	* cjk.h (is_cjk_encoding): Convert declaration to ANSI C.
	* uniname.c (unicode_name_word, unicode_name_word_lookup,
	unicode_character_name, unicode_name_character): Convert declaration
	to ANSI C.
	* uniname.h (unicode_character_name, unicode_name_character): Convert
	declaration to ANSI C.
	* width.c (uc_width): Likewise.

	* utils/ccmp2c.c (token_type_t): Renamed from enum token_t.

	* debug.d (read_form): Limit variable scope because of 'goto'.
	(SHOW-STACK): Add a cast.
	* eval.d (sym_value): Limit variable scope because of 'goto'.
	(setq): Likewise.
	(nest_env): Move variable declaration because of 'goto'.
	(eval_closure): Bug fix: Avoid setting the STACK to an uninitialized
	value in case of error.
	(apply): Move error code because of 'goto'.
	(apply_closure): Likewise.
	(funcall): Likewise.
	* io.d (write_sstring_case): Move some code because of 'goto'.
	(pr_enter_1): Limit variable scope because of 'goto'.
	* realelem.d (defaultfloatcase): Move variable declaration because of
	'goto'.
	* spvw.d (main): Limit variable scope because of 'goto'.
	* spvw_debug.d (string_out): Fix element type of buffer.
	* spvw_memfile.d (loadmem_update_fsubr): Add cast.
	* stream.d (lisp_completion): Limit variable scope because of 'goto'.
	(rd_ch_terminal3): Add some casts.